# crypto-ai-signal-bot

./: .env.example  README.md  pyproject.toml
docs/: ARCHITECTURE.md  ROADMAP.md
src/crypto_bot/: __init__.py  config.py
src/crypto_bot/backtest/: __init__.py  walk_forward.py
src/crypto_bot/cli/: artifact_resolve.py  backtest.py  ccxt_daemon.py  entrypoint.py  fetch_bars.py  model_registry.py  paper_step.py  stub_daemon.py  train_baseline.py
src/crypto_bot/execution/: __init__.py  ccxt_sync.py  engine.py  factory.py  paper.py  types.py
src/crypto_bot/features/: __init__.py  config.py  engine.py  schema.py
src/crypto_bot/loop/: __init__.py  ccxt_daemon.py  stub_daemon.py
src/crypto_bot/market_data/: __init__.py  bars_csv.py  bars_parquet.py  bars_sqlite.py  ccxt_balance.py  ccxt_provider.py  normalize.py  provider.py  stub.py  types.py
src/crypto_bot/model/: __init__.py  artifacts.py  baseline.py  dataset.py  label_config.py  labels.py  metrics.py  registry.py
src/crypto_bot/pipeline/: __init__.py  orchestrator.py  types.py
src/crypto_bot/risk/: __init__.py  config.py  engine.py  spot_balance.py  state.py
tests/: test_artifact_resolve.py  test_backtest_walk_forward.py  test_bars_csv.py  test_bars_parquet.py  test_bars_sqlite.py  test_ccxt_balance.py  test_ccxt_daemon.py  test_ccxt_execution_sync.py  test_ccxt_provider.py  test_cli_entrypoint.py  test_cli_fetch_bars.py  test_execution_factory.py  test_execution_paper.py  test_features_engine.py  test_loop_stub_daemon.py  test_market_data_stub.py  test_model_artifacts.py  test_model_baseline.py  test_model_labels.py  test_model_metrics.py  test_model_registry.py  test_normalize.py  test_pipeline_orchestrator.py  test_risk_engine.py
