[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-bot"
version = "0.1.0"
description = "AI signal + risk + execution crypto bot (scaffold)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "ccxt>=4.4.0",
]

[project.scripts]
crypto-fetch-bars = "crypto_bot.cli.fetch_bars:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff==0.9.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
